--- a/render.yaml
+++ b/render.yaml
@@ -3,4 +3,4 @@ services:
     name: audio-analyzer
     env: python
     buildCommand: pip install -r requirements.txt
-    startCommand: gunicorn main:app -k uvicorn.workers.UvicornWorker --bind 0.0.0.0:8000
+    startCommand: web: uvicorn main:app --host=0.0.0.0 --port=${PORT:-8000}
