--- a/requirements.txt
+++ b/requirements.txt
@@ -3,10 +3,11 @@ uvicorn==0.29.0
 jinja2==3.1.3
 python-multipart==0.0.9
 librosa==0.10.1
-numpy==1.24.3
+numpy==1.23.5       
 matplotlib==3.7.1
 openai-whisper==20230314
 scikit-learn==1.2.2
 pydub==0.25.1
 imageio[ffmpeg]==2.31.1
 setuptools>=68.0.0
+pip>=23.3.1
