--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ uvicorn==0.29.0
 jinja2==3.1.3
 python-multipart==0.0.9
 librosa==0.10.1
-numpy==1.23.5       
+numpy>=1.26.0      
 matplotlib==3.7.1
 openai-whisper==20230314
 scikit-learn==1.2.2
