--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,11 @@
-fastapi==0.110.0
-uvicorn==0.29.0
-jinja2==3.1.3
-python-multipart==0.0.9
-librosa==0.10.1
-numpy>=1.26.0      
-matplotlib==3.7.1
+fastapi==0.95.2
+uvicorn==0.22.0
+jinja2==3.1.2
+python-multipart==0.0.6
+librosa==0.10.0.post2
+numpy==1.23.5
+matplotlib==3.6.3
 openai-whisper==20230314
 scikit-learn==1.2.2
 pydub==0.25.1
-imageio[ffmpeg]==2.31.1
-setuptools>=68.0.0
-pip>=23.3.1
-wheel>=0.41.0
+imageio[ffmpeg]==2.27.0
