--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
-fastapi==0.95.2
-uvicorn==0.22.0
-jinja2==3.1.2
-python-multipart==0.0.6
-librosa==0.10.0.post2
-numpy==1.23.5
-matplotlib==3.6.3
-openai-whisper==20230314
-scikit-learn==1.2.2
-pydub==0.25.1
-imageio[ffmpeg]==2.27.0
+fastapi
+uvicorn
+jinja2
+python-multipart
+librosa
+numpy
+matplotlib
+openai-whisper
+scikit-learn
+pydub
+imageio[ffmpeg]
